2006-09-23  Hans Breuer  <hans@breuer.org>

	* app/commands.c app/create_object.c app/disp_callbacks.c : add
	missing #include "lib/parent.h"

	* lib/makefile.msc : build textline.obj
	
	* objects/makefile.msc : don't build newgroup.obj
	* objects/misc/libmisc.c : with newgroup gone to app/ newgroup_type can 
	not be registered from the module any longer - at least not on win32

	* plug-ins/python/makefile.msc : removed obsolete references to 
	Python 1.5, also removed misleading link to Python 2.2 debug build

	* app/diagram.[ch] app/app_procs.c : don't use C++ keyword 'virtual' 
	as variable name: s/virtual/is_default/
	
	* plug-ins/python/*.c : don't mix PyObject_NEW() with PyMem_DEL()
	Newer versions of Python (2.5) are not tolerant about this anymore.
	
2006-09-11  Lars Clausen  <lars@raeder.dk>

	* lib/diasvgrenderer.c (draw_text_line): First stab at making svg
	text line renderer, doesn't work yet.

	* lib/textline.c (text_line_draw): Removed #define.

	* lib/diagdkrenderer.c (draw_text_line): Slight cleanups.

2006-09-11  Steffen Macke <sdteffen@gmail.com>

	* plug-ins/vdx/vdx-export.c:
	* plug-ins/vdx/vdx-import.c:
	* plug-ins/vdx/vdx-xml.c:
	* plug-ins/vdx/vdx.h:
	* plug-ins/vdx/visio-types.h: Update to version 0.5 (from 0.4) of
	Visio import, thanks to Ian Redfern, who states: 
	
	This is the first version to support export to VDX - for now, just 
	straight lines and text, but I'm working on the more complex bits. 
	It currently writes Visio 2002 VDX as a lowest common denominator, 
	but that won't handle Beziers, so when I get round to converting them 
	to NURBS, only Visio 2003 users will be able to import them.

	There are also several improvements to import, both to fix the layout 
	and clean up the code, and it can now import embedded bitmaps - as Dia
	needs them to be separate files, it puts them in /tmp (or wherever 
	tempnam() goes to on your system). Alternative suggestions are welcome. 